--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --no-color 2>output.txt",
-    "start": "webpack-dev-server --mode development --watch --open --hot",
-    "build": "webpack --mode production"
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development --watch --open --hot",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "css-loader": "^4.3.0",
+    "cypress": "^9.5.0",
     "jest-junit": "^11.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.9",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12",
-    "cypress": "^9.5.0"
+    "webpack-cli": "^3.3.12"
   },
   "jest": {
     "moduleNameMapper": {
@@ -49,6 +52,7 @@
     "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.0",
+    "websocket-driver": "^0.7.4",
     "xml-js": "^1.6.11"
   }
 }
