--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --no-color 2>output.txt",
+    "test": "jest --no-color --passWithNoTests 2>output.txt",
     "cy:test": "cypress run",
     "cy:open": "cypress open",
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development --watch --open --hot",
@@ -35,6 +35,9 @@
     "reporters": [
       "default",
       "jest-junit"
+    ],
+    "testPathIgnorePatterns": [
+      "cypress/"
     ]
   },
   "devDependencies": {
